[gd_scene load_steps=2 format=3 uid="uid://dj0v8faygmsca"]

[ext_resource type="Script" path="res://resources/menus/CharacterSelectScreen.gd" id="1_dwo5d"]

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwo5d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -33.0
offset_right = 57.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Mole" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Mole"

[node name="Badger" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Badger"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Mole" to="." method="_on_mole_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Badger" to="." method="_on_badger_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
